--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache: pip
 matrix:
   include:
     - python: 3.7
+    - python: 3.8-dev
+    - python: nightly
 before_install:
   # depends
   - pip install aiopg
