--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ matrix:
     - python: 3.7
     - python: 3.8-dev
     - python: nightly
+  # because of psycopg2 build error:
+  # psycopg/psycopgmodule.c:689:18: error: dereferencing pointer to incomplete type ‘PyInterpreterState {aka struct _is}’
+  allow_failures:
+    - python: 3.8-dev
+    - python: nightly
 before_install:
   # depends
   - pip install aiopg
