--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache: pip
 matrix:
   include:
     - python: 3.7
+      env: COVERAGE=yes
     - python: 3.8-dev
     - python: nightly
   # because of psycopg2 build error:
@@ -19,6 +20,7 @@ before_install:
   - pip install aiopg
 
   # test depends
+  - pip install coveralls
   - pip install mypy
   - pip install flake8
   - pip install flake8-builtins!=1.1.0
@@ -27,3 +29,7 @@ before_install:
 script:
   - make flake8
   - make mypy
+  - coverage run repology-linkcecker.py --dsn "dbname=repology user=repology password=repology" --single-run
+  - psql -U repology -c 'SELECT * FROM links'
+after_success:
+  - if [ -n "$COVERAGE" ]; then coveralls; fi
