Use extended pgsql output

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ script:
   - make flake8
   - make mypy
   - coverage run repology-linkchecker.py --dsn "dbname=repology user=repology password=repology" --single-run
-  - psql -U repology -c 'SELECT * FROM links'
+  - psql -U repology -x -c 'SELECT * FROM links'
 after_success:
   - if [ -n "$COVERAGE" ]; then coveralls; fi
