Install required module in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
   - sudo -u postgres psql < ci/create_database.sql
 before_install:
   # depends
+  - pip install aiohttp
   - pip install aiopg
 
   # test depends
