--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - sudo -u postgres psql < ci/create_database.sql
 before_install:
   # depends
+  - pip install aiodns
   - pip install aiohttp
   - pip install aiopg
 
