--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
       env: COVERAGE=yes
     - python: 3.8-dev
     - python: nightly
-  allow_failures:  # mypy incompatibility
+  allow_failures:  # mypy, coverage incompatibility
     - python: 3.8-dev
     - python: nightly
 before_script:
@@ -25,7 +25,7 @@ before_install:
 
   # test depends
   - pip install coveralls
-  - pip install mypy
+  - pip install mypy!=0.710,!=0.711  # incompatibility with aiohttp, see https://github.com/aio-libs/aiohttp/issues/3868
   - pip install flake8
   - pip install flake8-builtins!=1.1.0
   - pip install flake8-import-order
