--- a/hosts.yaml
+++ b/hosts.yaml
@@ -37,3 +37,4 @@ ofset.org: { blacklist: true }
 # overtaken
 konst.org.ua: { blacklist: true }
 thekonst.net: { blacklist: true }
+topfx.com: { blacklist: true }
