--- a/hosts.yaml
+++ b/hosts.yaml
@@ -38,3 +38,4 @@ ofset.org: { blacklist: true }
 konst.org.ua: { blacklist: true }
 thekonst.net: { blacklist: true }
 topfx.com: { blacklist: true }
+tkzinc.org: { blacklist: true }
