--- a/hosts.yaml
+++ b/hosts.yaml
@@ -39,3 +39,4 @@ konst.org.ua: { blacklist: true }
 thekonst.net: { blacklist: true }
 topfx.com: { blacklist: true }
 tkzinc.org: { blacklist: true }
+gnugadu.org: { blacklist: true }
