--- a/hosts.yaml
+++ b/hosts.yaml
@@ -40,3 +40,4 @@ thekonst.net: { blacklist: true }
 topfx.com: { blacklist: true }
 tkzinc.org: { blacklist: true }
 gnugadu.org: { blacklist: true }
+junoplay.com: { blacklist: true }
