--- a/hosts.yaml
+++ b/hosts.yaml
@@ -41,3 +41,6 @@ topfx.com: { blacklist: true }
 tkzinc.org: { blacklist: true }
 gnugadu.org: { blacklist: true }
 junoplay.com: { blacklist: true }
+conduit-project.org: { blacklist: true }
+cross-pcg.com: { blacklist: true }
+coolreader.org: { blacklist: true }
