--- a/hosts.yaml
+++ b/hosts.yaml
@@ -44,3 +44,5 @@ junoplay.com: { blacklist: true }
 conduit-project.org: { blacklist: true }
 cross-pcg.com: { blacklist: true }
 coolreader.org: { blacklist: true }
+opensync.org: { blacklist: true }
+wmii.de: { blacklist: true }
