--- a/hosts.yaml
+++ b/hosts.yaml
@@ -46,3 +46,4 @@ cross-pcg.com: { blacklist: true }
 coolreader.org: { blacklist: true }
 opensync.org: { blacklist: true }
 wmii.de: { blacklist: true }
+libcapn.org: { blacklist: true }
