--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ matrix:
   include:
     - python: 3.7
       env: COVERAGE=yes
-    - python: 3.8-dev
+    - python: 3.8
     - python: nightly
-  allow_failures:  # mypy, coverage incompatibility
-    - python: 3.8-dev
+  allow_failures:
     - python: nightly
 before_install:
   - pip install coveralls
