--- a/hosts.yaml
+++ b/hosts.yaml
@@ -47,3 +47,4 @@ coolreader.org: { blacklist: true }
 opensync.org: { blacklist: true }
 wmii.de: { blacklist: true }
 libcapn.org: { blacklist: true }
+aseman.co: { blacklist: true }
