--- a/hosts.yaml
+++ b/hosts.yaml
@@ -48,3 +48,4 @@ opensync.org: { blacklist: true }
 wmii.de: { blacklist: true }
 libcapn.org: { blacklist: true }
 aseman.co: { blacklist: true }
+ferite.org: { blacklist: true }
