--- a/hosts.yaml
+++ b/hosts.yaml
@@ -49,3 +49,4 @@ wmii.de: { blacklist: true }
 libcapn.org: { blacklist: true }
 aseman.co: { blacklist: true }
 ferite.org: { blacklist: true }
+jnickelsen.de: { blacklist: true }
