--- a/hosts.yaml
+++ b/hosts.yaml
@@ -50,3 +50,4 @@ libcapn.org: { blacklist: true }
 aseman.co: { blacklist: true }
 ferite.org: { blacklist: true }
 jnickelsen.de: { blacklist: true }
+htpc-forum.de: { blacklist: true }
