--- a/hosts.yaml
+++ b/hosts.yaml
@@ -51,3 +51,4 @@ aseman.co: { blacklist: true }
 ferite.org: { blacklist: true }
 jnickelsen.de: { blacklist: true }
 htpc-forum.de: { blacklist: true }
+somethingaboutorange.com: { blacklist: true }
