--- a/hosts.yaml
+++ b/hosts.yaml
@@ -53,3 +53,4 @@ ferite.org: { blacklist: true }
 jnickelsen.de: { blacklist: true }
 htpc-forum.de: { blacklist: true }
 somethingaboutorange.com: { blacklist: true }
+ekg2.org: { blacklist: true }
