Blacklist another host

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -54,3 +54,4 @@ jnickelsen.de: { blacklist: true }
 htpc-forum.de: { blacklist: true }
 somethingaboutorange.com: { blacklist: true }
 ekg2.org: { blacklist: true }
+boutell.co.uk: { blacklist: true }
