--- a/hosts.yaml
+++ b/hosts.yaml
@@ -9,6 +9,7 @@ npmjs.org: { delay: 10 }
 sf.net: { aggregate: true }
 sourceforge.net: { aggregate: true }
 dev.gentoo.org: { delay: 1 }
+files.pythonhosted.org: { delay: 1 }
 
 #
 # blacklist
