--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,6 +1,7 @@
 #
 # per-host overrides
 #
+cpan.metacpan.org: { recheck: 14d-21d } # too many links, but unlikely to change status
 dev.exherbo.org: { delay: 1 }
 dev.gentoo.org: { delay: 1 }
 files.pythonhosted.org: { delay: 1 }
@@ -9,7 +10,8 @@ github.io: { delay: 1, aggregate: true }
 notabug.org: { delay: 60 }
 npmjs.com: { delay: 10 }
 npmjs.org: { delay: 10 }
-rubygems.org: { recheck: 14d-21d } # too many links, unlikely to disappear
+rubygems.org: { recheck: 14d-21d } # too many links, but unlikely to change status
+search.cpan.org: { recheck: 14d-21d } # too many links, but unlikely to change status
 sf.net: { aggregate: true }
 sourceforge.net: { aggregate: true }
 
