--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,18 +1,21 @@
 #
 # per-host overrides
 #
-cpan.metacpan.org: { recheck: 14d-21d } # too many links, but unlikely to change status
+
+# for module hosting facilities (rubygems, pypi, cpan) we set larger recheck time
+# since there are a lot of links, but the links are unlikely to change status
+cpan.metacpan.org: { recheck: 14d-21d }
 dev.exherbo.org: { delay: 1 }
 dev.gentoo.org: { delay: 1 }
-files.pythonhosted.org: { delay: 1 }
+files.pythonhosted.org: { delay: 1, recheck: 14d-21d }
 github.com: { delay: 1 }
 github.io: { delay: 1, aggregate: true }
 notabug.org: { delay: 60 }
 npmjs.com: { delay: 10 }
 npmjs.org: { delay: 10 }
-pypi.org: { delay: 1 }
-rubygems.org: { recheck: 14d-21d } # too many links, but unlikely to change status
-search.cpan.org: { recheck: 14d-21d } # too many links, but unlikely to change status
+pypi.org: { delay: 1, recheck: 14d-21d }
+rubygems.org: { recheck: 14d-21d }
+search.cpan.org: { recheck: 14d-21d }
 sf.net: { aggregate: true }
 sourceforge.net: { aggregate: true }
 
