--- a/hosts.yaml
+++ b/hosts.yaml
@@ -21,6 +21,7 @@ hosts:
   search.cpan.org: { priority_recheck: 14d-21d }
   sf.net: { aggregate: true }
   sourceforge.net: { aggregate: true }
+  buildd.debian.org: { delay: 60 }
 
   #
   # blacklist
