Add another big host

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -24,6 +24,7 @@ hosts:
   buildd.debian.org: { delay: 60, recheck: 60d-90d } # sensitive to load
   crates.io: { skip: true } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
   svnweb.freebsd.org: { skip: true } # misconfigured crap, always 403
+  src.fedoraproject.org: { recheck: 30d-60d } # very big
 
   #
   # blacklist
