--- a/hosts.yaml
+++ b/hosts.yaml
@@ -25,6 +25,7 @@ hosts:
   crates.io: { skip: true } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
   svnweb.freebsd.org: { skip: true } # misconfigured crap, always 403
   src.fedoraproject.org: { recheck: 30d-60d } # very big
+  sting.dragonflybsd.org: { recheck: 21d-28d } # ipv6 always times out; XXX: need a way to disable IPv6 or lower the timeout for it, see #31 #32
 
   #
   # blacklist
