--- a/hosts.yaml
+++ b/hosts.yaml
@@ -77,3 +77,4 @@ hosts:
   svn.mandriva.com: { blacklist: true }
   yafray.org: { blacklist: true }
   kermit-project.org: { blacklist: true }
+  htdig.org: { blacklist: true }
