--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,7 +1,7 @@
 defaults:
   delay: 3
   priority_recheck: 6d-8d
-  recheck: 60d-90d
+  recheck: 14d-21d
 
 hosts:
   # for module hosting facilities (rubygems, pypi, cpan) we set larger recheck time
@@ -24,8 +24,8 @@ hosts:
   buildd.debian.org: { delay: 60, recheck: 300d-360d } # sensitive to load
   crates.io: { skip: true } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
   svnweb.freebsd.org: { skip: true } # misconfigured crap, always 403
-  #src.fedoraproject.org: { recheck: 30d-60d } # very big
-  #sting.dragonflybsd.org: { recheck: 21d-28d } # ipv6 always times out; XXX: need a way to disable IPv6 or lower the timeout for it, see #31 #32
+  src.fedoraproject.org: { recheck: 30d-60d } # very big
+  sting.dragonflybsd.org: { recheck: 21d-28d } # ipv6 always times out; XXX: need a way to disable IPv6 or lower the timeout for it, see #31 #32
 
   #
   # blacklist
