--- a/hosts.yaml
+++ b/hosts.yaml
@@ -10,7 +10,7 @@ hosts:
   dev.exherbo.org: { delay: 1 }
   dev.gentoo.org: { delay: 1 }
   files.pythonhosted.org: { delay: 1, priority_recheck: 14d-21d }
-  github.com: { delay: 1, recheck: 21d-30d }
+  github.com: { delay: 1, priority_recheck: 14d-21d, recheck: 30d-45d }
   github.io: { delay: 1, aggregate: true }
   gitlab.com: { delay: 1 }
   notabug.org: { delay: 60 }
