Update for couple of hosts

--- a/hosts.yaml
+++ b/hosts.yaml
@@ -11,12 +11,13 @@ hosts:
   build.opensuse.org: { recheck: 21d-28d }
   cpan.metacpan.org: { priority_recheck: 14d-21d }
   crates.io: { skip: true } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
-  dev.exherbo.org: { delay: 1 }
+  dev.exherbo.org: { delay: 1, priority_recheck: 30d-45d } # broken (ipv6?), 60+ sec checks
   dev.gentoo.org: { delay: 1 }
   files.pythonhosted.org: { delay: 1, recheck: 30d-45d, priority_recheck: 30d-45d }
   github.com: { delay: 1, priority_recheck: 21d-28d, recheck: 45d-70d }
   github.io: { delay: 1, aggregate: true }
   gitlab.com: { delay: 1 }
+  kojipkgs.fedoraproject.org: { recheck: 45d-70d }
   mran.revolutionanalytics.com: { priority_recheck: 14d-21d }
   notabug.org: { delay: 60 }
   npmjs.com: { delay: 10 }
