--- a/hosts.yaml
+++ b/hosts.yaml
@@ -11,14 +11,14 @@ hosts:
   buildd.debian.org: { delay: 60, recheck: 400d-600d } # sensitive to load
   build.opensuse.org: { recheck: 21d-42d }
   cpan.metacpan.org: { priority_recheck: 14d-28d }
-  crates.io: { skip: true } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
+  crates.io: { skip: true, recheck: 60-90d, priority_recheck: 60-90d } # misconfigured crap, always 404; XXX: this is true only for crate pages, not for e.g. https://crates.io/api/v1/crates/abscissa_core/0.5.2/download
   dev.exherbo.org: { delay: 1, priority_recheck: 30d-60d } # broken (ipv6?), 60+ sec checks
   dev.gentoo.org: { delay: 1 }
   files.pythonhosted.org: { delay: 1, recheck: 30d-60d, priority_recheck: 30d-60d }
   github.com: { delay: 1, priority_recheck: 21d-42d, recheck: 45d-90d }
   github.io: { delay: 1, aggregate: true }
   gitlab.com: { delay: 1 }
-  hydra.nixos.org: { skip: true } # nix build logs, no need to check
+  hydra.nixos.org: { skip: true, recheck: 60-90d, priority_recheck: 60-90d } # nix build logs, no need to check
   kojipkgs.fedoraproject.org: { recheck: 45d-90d }
   mran.revolutionanalytics.com: { priority_recheck: 14d-28d }
   notabug.org: { delay: 60 }
